[project]
name = "agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.12.0",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "prompt-toolkit>=3.0.52",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "rich>=14.3.3",
]
